# Quater_2

./: Assignment02.md  Assignment_05_Gemini_2_0_Video_and_Audio_Analysis_.ipynb  Projects_201  README.md  Tool_calling.ipynb  Tool_calling_using_gemini2_0.ipynb
Assignment_02/: Assignment02.md
Assignment_05_Gemini_2_0_Video_and_Audio_Analysis/: Assignment_05_Gemini_2_0_Video_and_Audio_Analysis_.ipynb
Assignment_6_LLM_model_for_creating_video/: Assignment_6_LLM_model_for_creating_video.ipynb
Project_01_Integrating_LangChain_and_Google_Gemini/: Project_01_Integrating_LangChain_and_Google_Gemini.ipynb
Project_02_LangChain_RAG_Project_project/: Project_02_LangChain_RAG_Project_project.ipynb
UV-Assignment-11/: pyproject.toml
UV-Assignment-11/src/project_one/: __init__.py  hello.py
